fixed overflow issue with entities list

--- a/krystallizer/assets/editor.css
+++ b/krystallizer/assets/editor.css
@@ -516,6 +516,9 @@ input:checked + .slider:before {
   display: grid;
   grid-auto-rows: var(--entity-display-size);
   grid-template-columns: repeat(2, minmax(128px, 1fr));
+  max-height: 300px;
+  overflow-y: scroll;
+  border-bottom: var(--border-style);
 }
 
 .entity-display {
